unpackaged/main/default/objects/Signes_vitaux__c/Signes_vitaux__c.object-meta.xml
<CustomObject>
    <label>Signes vitaux</label>
    <nameField>
        <displayFormat>SV-{00000000}</displayFormat>
        <label>Nom de Signes vitaux</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signes vitaux</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>