unpackaged/main/default/objects/Signes_vitaux__c/fields/Diastolique__c.field-meta.xml
<CustomField>
    <fullName>Diastolique__c</fullName>
    <label>Diastolique</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>