unpackaged/main/default/objects/Signes_vitaux__c/fields/Dossier_de_soins__c.field-meta.xml
<CustomField>
    <fullName>Dossier_de_soins__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier de soins</label>
    <referenceTo>Dossier_de_soins__c</referenceTo>
    <relationshipLabel>Signes vitaux</relationshipLabel>
    <relationshipName>Signes_vitaux</relationshipName>
    <type>Lookup</type>
</CustomField>