unpackaged/main/default/objects/Signes_vitaux__c/fields/P_rim_tre_abdominal_en_cm__c.field-meta.xml
<CustomField>
    <fullName>P_rim_tre_abdominal_en_cm__c</fullName>
    <label>Périmètre abdominal en cm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>