unpackaged/main/default/objects/Signes_vitaux__c/fields/Poids_en_Kg__c.field-meta.xml
<CustomField>
    <fullName>Poids_en_Kg__c</fullName>
    <label>Poids en Kg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>