unpackaged/main/default/objects/Signes_vitaux__c/fields/Pulsation__c.field-meta.xml
<CustomField>
    <fullName>Pulsation__c</fullName>
    <label>Pulsation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>