unpackaged/main/default/objects/Signes_vitaux__c/fields/Pulsation_irr_guli_re__c.field-meta.xml
<CustomField>
    <fullName>Pulsation_irr_guli_re__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pulsation irrégulière</label>
    <type>Checkbox</type>
</CustomField>