unpackaged/main/default/objects/Signes_vitaux__c/fields/Saturation_O2__c.field-meta.xml
<CustomField>
    <fullName>Saturation_O2__c</fullName>
    <label>Saturation O2%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>