unpackaged/main/default/objects/Signes_vitaux__c/fields/Systolique__c.field-meta.xml
<CustomField>
    <fullName>Systolique__c</fullName>
    <label>Systolique</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>