unpackaged/main/default/objects/Signes_vitaux__c/fields/Taille_en_cm__c.field-meta.xml
<CustomField>
    <fullName>Taille_en_cm__c</fullName>
    <label>Taille en cm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>