unpackaged/main/default/objects/Signes_vitaux__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Signes vitaux</relationshipLabel>
    <relationshipName>Signes_vitaux</relationshipName>
    <type>Lookup</type>
</CustomField>